[gd_scene load_steps=75 format=2]

[ext_resource path="res://characters/flower/sprites/head/happy.tres" type="Texture" id=1]
[ext_resource path="res://characters/flower/Flower.gd" type="Script" id=2]
[ext_resource path="res://characters/flower/shader/sway_2d.shader" type="Shader" id=4]
[ext_resource path="res://characters/flower/sprites/stem/grow_1.tres" type="Texture" id=5]
[ext_resource path="res://characters/flower/sprites/stem/grow_8.tres" type="Texture" id=6]
[ext_resource path="res://characters/flower/sprites/stem/grow_5.tres" type="Texture" id=7]
[ext_resource path="res://characters/flower/sprites/stem/grow_2.tres" type="Texture" id=8]
[ext_resource path="res://characters/flower/sprites/stem/grow_3.tres" type="Texture" id=9]
[ext_resource path="res://characters/flower/sprites/stem/grow_0.tres" type="Texture" id=10]
[ext_resource path="res://characters/flower/sprites/stem/grow_9.tres" type="Texture" id=11]
[ext_resource path="res://characters/flower/sprites/stem/grow_4.tres" type="Texture" id=12]
[ext_resource path="res://characters/flower/sprites/stem/grow_6.tres" type="Texture" id=13]
[ext_resource path="res://characters/flower/sprites/stem/grow_10.tres" type="Texture" id=14]
[ext_resource path="res://characters/flower/sprites/stem/grow_7.tres" type="Texture" id=15]
[ext_resource path="res://characters/flower/sprites/stem/grow_15.tres" type="Texture" id=16]
[ext_resource path="res://characters/flower/sprites/stem/grow_19.tres" type="Texture" id=17]
[ext_resource path="res://characters/flower/sprites/stem/grow_12.tres" type="Texture" id=18]
[ext_resource path="res://characters/flower/sprites/stem/grow_16.tres" type="Texture" id=19]
[ext_resource path="res://characters/flower/sprites/stem/grow_18.tres" type="Texture" id=20]
[ext_resource path="res://characters/flower/sprites/stem/grow_14.tres" type="Texture" id=21]
[ext_resource path="res://characters/flower/sprites/stem/grow_11.tres" type="Texture" id=22]
[ext_resource path="res://characters/flower/sprites/stem/grow_17.tres" type="Texture" id=23]
[ext_resource path="res://characters/flower/sprites/stem/grow_13.tres" type="Texture" id=24]
[ext_resource path="res://characters/flower/sprites/stem/grow_24.tres" type="Texture" id=25]
[ext_resource path="res://characters/flower/sprites/stem/grow_22.tres" type="Texture" id=26]
[ext_resource path="res://characters/flower/sprites/stem/grow_27.tres" type="Texture" id=27]
[ext_resource path="res://characters/flower/sprites/stem/grow_31.tres" type="Texture" id=28]
[ext_resource path="res://characters/flower/sprites/stem/grow_21.tres" type="Texture" id=29]
[ext_resource path="res://characters/flower/sprites/stem/grow_32.tres" type="Texture" id=30]
[ext_resource path="res://characters/flower/sprites/stem/grow_23.tres" type="Texture" id=31]
[ext_resource path="res://characters/flower/sprites/stem/grow_28.tres" type="Texture" id=32]
[ext_resource path="res://characters/flower/sprites/stem/grow_26.tres" type="Texture" id=33]
[ext_resource path="res://characters/flower/sprites/stem/grow_20.tres" type="Texture" id=34]
[ext_resource path="res://characters/flower/sprites/stem/grow_29.tres" type="Texture" id=35]
[ext_resource path="res://characters/flower/sprites/stem/grow_30.tres" type="Texture" id=36]
[ext_resource path="res://characters/flower/sprites/stem/grow_25.tres" type="Texture" id=37]
[ext_resource path="res://characters/flower/sprites/stem/grow_43.tres" type="Texture" id=38]
[ext_resource path="res://characters/flower/sprites/stem/grow_44.tres" type="Texture" id=39]
[ext_resource path="res://characters/flower/sprites/stem/grow_39.tres" type="Texture" id=40]
[ext_resource path="res://characters/flower/sprites/stem/grow_41.tres" type="Texture" id=41]
[ext_resource path="res://characters/flower/sprites/stem/grow_35.tres" type="Texture" id=42]
[ext_resource path="res://characters/flower/sprites/stem/grow_37.tres" type="Texture" id=43]
[ext_resource path="res://characters/flower/sprites/stem/grow_45.tres" type="Texture" id=44]
[ext_resource path="res://characters/flower/sprites/stem/grow_38.tres" type="Texture" id=45]
[ext_resource path="res://characters/flower/sprites/stem/grow_34.tres" type="Texture" id=46]
[ext_resource path="res://characters/flower/sprites/stem/grow_36.tres" type="Texture" id=47]
[ext_resource path="res://characters/flower/sprites/stem/grow_33.tres" type="Texture" id=48]
[ext_resource path="res://characters/flower/sprites/stem/grow_42.tres" type="Texture" id=49]
[ext_resource path="res://characters/flower/sprites/stem/grow_40.tres" type="Texture" id=50]
[ext_resource path="res://characters/flower/sprites/stem/grow_49.tres" type="Texture" id=51]
[ext_resource path="res://characters/flower/sprites/stem/grow_48.tres" type="Texture" id=52]
[ext_resource path="res://characters/flower/sprites/stem/grow_46.tres" type="Texture" id=53]
[ext_resource path="res://characters/flower/sprites/stem/grow_47.tres" type="Texture" id=54]
[ext_resource path="res://characters/flower/DebugShadowCheck.gd" type="Script" id=55]
[ext_resource path="res://characters/flower/sprites/head/sad.tres" type="Texture" id=56]
[ext_resource path="res://characters/flower/sprites/petals/glow_1.tres" type="Texture" id=57]
[ext_resource path="res://characters/flower/sprites/petals/glow_3.tres" type="Texture" id=58]
[ext_resource path="res://characters/flower/sprites/petals/glow_4.tres" type="Texture" id=59]
[ext_resource path="res://characters/flower/sprites/petals/glow_2.tres" type="Texture" id=60]
[ext_resource path="res://characters/flower/shader/glow_2d.shader" type="Shader" id=61]
[ext_resource path="res://characters/flower/sprites/head/cry.tres" type="Texture" id=62]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/speed = 1.0
shader_param/minStrength = 0.1
shader_param/maxStrength = 0.4
shader_param/strengthScale = 100.0
shader_param/interval = 3.5
shader_param/detail = 1.0
shader_param/distortion = null
shader_param/heightOffset = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/speed = 1.0
shader_param/minStrength = 0.1
shader_param/maxStrength = 0.2
shader_param/strengthScale = 100.0
shader_param/interval = 3.5
shader_param/detail = 1.0
shader_param/distortion = 0.0
shader_param/heightOffset = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 61 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 55, 132.667 )

[sub_resource type="Animation" id=5]
resource_name = "cry"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Head:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 62 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/PetalsGlow:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Stem:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 0, 350 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 55, 132.667 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 0, 407.333 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Stem:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 350 ), Vector2( 0, 222.848 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 55, 132.667 ), Vector2( 55, 192.854 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 407.333 ), Vector2( 0, 350 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Stem:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ Vector2( 0, 222.848 ), Vector2( 0, 69.4093 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ Vector2( 55, 192.854 ), Vector2( 55, 270 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ Vector2( 0, 350 ), Vector2( 0, 270 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Stem:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 34 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 69.4093 ), Vector2( 0, -107.491 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 55, 270 ), Vector2( 55, 358.13 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 270 ), Vector2( 0, 183.246 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Stem:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 36 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 47 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 40 ), ExtResource( 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -107.491 ), Vector2( 0, -308.444 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 55, 358.13 ), Vector2( 55, 453.851 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 183.246 ), Vector2( 0, 86.8008 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Stem:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 50 ), ExtResource( 41 ), ExtResource( 49 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 44 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 52 ), ExtResource( 51 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -308.444 ), Vector2( 0, -465 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 55, 453.851 ), Vector2( 55, 540 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 86.8008 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "happy"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Head:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/PetalsGlow:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 57 ), ExtResource( 60 ), ExtResource( 58 ), ExtResource( 59 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "sad"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/PetalsGlow:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[node name="Flower" type="Area2D" groups=[
"Damageable",
]]
collision_layer = 96
collision_mask = 16
script = ExtResource( 2 )
blocker_layer = 4

[node name="Stem" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 10 )

[node name="Head" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 350 )
texture = ExtResource( 62 )

[node name="PetalsGlow" type="Sprite" parent="Head"]
self_modulate = Color( 1, 1, 1, 0.701961 )
material = SubResource( 3 )
texture = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 407.333 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "grow_stage_0"
playback_process_mode = 0
anims/cry = SubResource( 5 )
anims/grow_stage_0 = SubResource( 6 )
anims/grow_stage_1 = SubResource( 7 )
anims/grow_stage_2 = SubResource( 8 )
anims/grow_stage_3 = SubResource( 9 )
anims/grow_stage_4 = SubResource( 10 )
anims/grow_stage_5 = SubResource( 11 )
anims/happy = SubResource( 12 )
anims/sad = SubResource( 13 )

[node name="DebugLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ShadowCheck" type="Node2D" parent="DebugLayer"]
script = ExtResource( 55 )

[node name="SadTimer" type="Timer" parent="."]
